--- a/kalkulator-proizvodnje/manifest.json
+++ b/kalkulator-proizvodnje/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Индустријски Калкулатор Производње",
+  "name": "Калкулатор Времена",
   "short_name": "Калкулатор",
-  "description": "Калкулатор за израчунавање времена производње у Ковачком Центру",
+  "description": "Калкулатор за израчунавање времена операција у Ковачком Центру",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#667eea",
